--- a/task_3/analysis_and_documentation/seabirds_analysis_documentation.Rmd
+++ b/task_3/analysis_and_documentation/seabirds_analysis_documentation.Rmd
@@ -26,22 +26,35 @@ seabirds <- read_csv(here("clean_data/seabirds.csv"))
 ### Task 1 Which bird had the most individual sightings?
 
 ```{r}
-# group by bird name and take a count of occurances
+# group by bird name and take a count of occurances, join this back into the table
+# to allow more names info to be pulled, arrange and slice head to get top hit
 seabirds %>% 
-  group_by(species_common_name_taxon_age_sex_plumage_phase) %>% 
+  group_by(species_common_name) %>% 
   summarise(count_of_sightings = n()) %>% 
-  arrange(desc(count_of_sightings))
+  left_join(seabirds, "species_common_name") %>% 
+  select(species_common_name, 
+         species_scientific_name, 
+         species_abbreviation, count_of_sightings) %>%
+  arrange(desc(count_of_sightings)) %>% 
+  slice_head()
 # Answer: Wandering albatross sensu lato PL2, count 3104
 ```
 
 ### Task 2 Which bird had the highest total count?
 
 ```{r}
-# group by bird name and take a summary of the count column for each
+# group by bird name and take a sum of count, join this back into the table
+# to allow more names info to be pulled, arrange and slice head to get top hit
 seabirds %>% 
-  group_by(species_common_name_taxon_age_sex_plumage_phase) %>% 
+  group_by(species_common_name) %>% 
   summarise(total_count = sum(count)) %>% 
-  arrange(desc(total_count))
+  left_join(seabirds, "species_common_name") %>% 
+  select(species_common_name, 
+         species_scientific_name, 
+         species_abbreviation, total_count) %>%
+  arrange(desc(total_count)) %>% 
+  slice_head()
+  
 # Answer: A Black-billed gull, count = 7732
 ```
 
@@ -51,21 +64,53 @@ seabirds %>%
 # group by bird name, filter by lat >-30 and take a summary of the count column for each
 seabirds %>% 
   filter(lat > -30) %>% 
-  group_by(species_common_name_taxon_age_sex_plumage_phase) %>% 
+  group_by(species_common_name) %>% 
   summarise(total_count = sum(count)) %>% 
-  arrange(desc(total_count))
+  left_join(seabirds, "species_common_name") %>% 
+  select(species_common_name, 
+         species_scientific_name, 
+         species_abbreviation, total_count) %>%
+  arrange(desc(total_count)) %>% 
+  slice_head()
 # Answer: A Wedge-tailed shearwater, count 855
 ```
 
 ### Task 4 How many different types of birds were only ever seen in groups of 1?
 
 ```{r}
-# ok so filter for count = 1, then group by name and count?
-seabirds %>% 
-  group_by(species_common_name_taxon_age_sex_plumage_phase) %>% 
-  for(i in )
-  #summarise(n())
-  #for(i in 1 to count(count))
+# ok so theres got to be a better way but i ended up adding two columns on
+# with the individual sightings and the total count. If these were equal with no
+# NA values which were dropped then all must have been sightings of one bird
 
+seabirds_counting <- seabirds %>% 
+  drop_na(count) %>% 
+  group_by(species_common_name) %>% 
+  summarise(count_of_sightings = n(), 
+            total_count = sum(count, na.rm = TRUE)) 
+  
+seabirds_plus_counts <- left_join(seabirds, 
+                                  seabirds_counting,
+                                  "species_common_name" )
+
+task_four_data <- seabirds_plus_counts %>% 
+  filter(count_of_sightings == total_count) %>% 
+  group_by(species_common_name) %>% 
+  summarise(n()) %>% 
+  nrow()
+task_four_data
+```
+
+### Task 5 How many penguins were seen
+
+```{r}
+# Note here I've calculated count of penguins seen not the number of sightings
+
+# here we filter for any names containing penguin then we count the total for the count column
+seabirds %>% 
+  filter(str_detect(species_common_name,
+                    "(?i).*penguin+.*")) %>% 
+  summarise(sum(count, na.rm = T))
+
+# 158 penguins were seen
 ```
 
