--- a/task_3/analysis_and_documentation/seabirds.Rmd
+++ b/task_3/analysis_and_documentation/seabirds.Rmd
@@ -61,7 +61,7 @@ seabirds %>%
 ### Task 3 Which bird had the highest total count above a latitude of -30?
 
 ```{r}
-# group by bird name, filter by lat >-30 and take a summary of the count column for each
+# same as Q2 but with a filter before for latitude > -30
 seabirds %>% 
   filter(lat > -30) %>% 
   group_by(species_common_name) %>% 
