--- a/task_3/analysis_and_documentation/seabirds.Rmd
+++ b/task_3/analysis_and_documentation/seabirds.Rmd
@@ -31,11 +31,11 @@ seabirds <- read_csv(here("clean_data/seabirds.csv"))
 seabirds %>% 
   group_by(species_common_name) %>% 
   summarise(count_of_sightings = n()) %>% 
-  left_join(seabirds, "species_common_name") %>% 
+  right_join(seabirds, "species_common_name") %>% 
   select(species_common_name, 
          species_scientific_name, 
          species_abbreviation, count_of_sightings) %>%
-  arrange(desc(count_of_sightings)) %>% 
+  arrange(desc(count_of_sightings))  %>% 
   slice_head()
 # Answer: Wandering albatross sensu lato PL2, count 3104
 ```
@@ -43,16 +43,19 @@ seabirds %>%
 ### Task 2 Which bird had the highest total count?
 
 ```{r}
+# Note ive taken this to mean highest count (adding the count of all sightings)
+# And not the highest count at a single sighting
+
 # group by bird name and take a sum of count, join this back into the table
 # to allow more names info to be pulled, arrange and slice head to get top hit
 seabirds %>% 
   group_by(species_common_name) %>% 
   summarise(total_count = sum(count)) %>% 
-  left_join(seabirds, "species_common_name") %>% 
+  right_join(seabirds, "species_common_name") %>% 
   select(species_common_name, 
          species_scientific_name, 
          species_abbreviation, total_count) %>%
-  arrange(desc(total_count)) %>% 
+  arrange(desc(total_count)) %>%
   slice_head()
   
 # Answer: A Black-billed gull, count = 7732
@@ -66,7 +69,7 @@ seabirds %>%
   filter(lat > -30) %>% 
   group_by(species_common_name) %>% 
   summarise(total_count = sum(count)) %>% 
-  left_join(seabirds, "species_common_name") %>% 
+  right_join(seabirds, "species_common_name") %>% 
   select(species_common_name, 
          species_scientific_name, 
          species_abbreviation, total_count) %>%
@@ -82,16 +85,20 @@ seabirds %>%
 # with the individual sightings and the total count. If these were equal with no
 # NA values which were dropped then all must have been sightings of one bird
 
+# make our two table with the count and sum we need
 seabirds_counting <- seabirds %>% 
   drop_na(count) %>% 
   group_by(species_common_name) %>% 
   summarise(count_of_sightings = n(), 
             total_count = sum(count, na.rm = TRUE)) 
   
+# join these onto our original table
 seabirds_plus_counts <- left_join(seabirds, 
                                   seabirds_counting,
                                   "species_common_name" )
 
+#filter for individual sightings (count = total count) meaning that each 
+# sighting per bird must have been an individual 
 task_four_data <- seabirds_plus_counts %>% 
   filter(count_of_sightings == total_count) %>% 
   group_by(species_common_name) %>% 
