--- a/task_3/analysis_and_documentation/seabirds.Rmd
+++ b/task_3/analysis_and_documentation/seabirds.Rmd
@@ -31,13 +31,15 @@ seabirds <- read_csv(here("clean_data/seabirds.csv"))
 seabirds %>% 
   group_by(species_common_name) %>% 
   summarise(count_of_sightings = n()) %>% 
+  arrange(desc(count_of_sightings))
+          
   right_join(seabirds, "species_common_name") %>% 
   select(species_common_name, 
          species_scientific_name, 
          species_abbreviation, count_of_sightings) %>%
   arrange(desc(count_of_sightings))  %>% 
   slice_head()
-# Answer: Wandering albatross sensu lato PL2, count 3104
+# Answer:Wandering albatross sensu lato PL2, count 3104
 ```
 
 ### Task 2 Which bird had the highest total count?
@@ -49,8 +51,10 @@ seabirds %>%
 # group by bird name and take a sum of count, join this back into the table
 # to allow more names info to be pulled, arrange and slice head to get top hit
 seabirds %>% 
+  drop_na(bird_count) %>% 
   group_by(species_common_name) %>% 
-  summarise(total_count = sum(count)) %>% 
+  summarise(total_count = sum(bird_count)) %>% 
+  arrange(desc(total_count)) %>% 
   right_join(seabirds, "species_common_name") %>% 
   select(species_common_name, 
          species_scientific_name, 
@@ -68,7 +72,8 @@ seabirds %>%
 seabirds %>% 
   filter(lat > -30) %>% 
   group_by(species_common_name) %>% 
-  summarise(total_count = sum(count)) %>% 
+  summarise(total_count = sum(bird_count)) %>%
+  arrange(desc(total_count))
   right_join(seabirds, "species_common_name") %>% 
   select(species_common_name, 
          species_scientific_name, 
